--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,28 @@ body {
 }
 
 #map {
-	height: 100%;
+	height: 80%;
 }
 
+#filterInput {
+	font-size: 18px;
+	height: 12px;
+	padding: 16px;
+	width: 100%;
+}
+
+#filter {
+	font-size: 18px;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+.result {
+	border: 1px solid #ddd; 
+	margin-top: -1px; 
+	background-color: #f6f6f6; 
+	padding: 12px; 
+	color: black; 
+	display: block; 
+}
